#ifndef __OUTPUTSTEPDATA_H__
#define __OUTPUTSTEPDATA_H__

#include <string>
using namespace std;

class OutputStepData
{
    public:
        string type;
        string cond;
        string thresh;
};

#endif // __OUTPUTSTEPDATA_H__